--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body> 
     <div id="root"> 
         <div> 
-            <button onclick="sorted('up')">По возрастанию</button> 
-            <button onclick="sorted('down')">По убыванию</button> 
-            <button onclick="sorted('no-sort')">Не сортировать</button> 
+            <button onclick="sorted('up')">djph</button> 
+            <button onclick="sorted('down')">e,sdfybt</button> 
+            <button onclick="sorted('no-sort')">1</button> 
         </div> 
         <div> 
             <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category"> 
